implemented real-time updates event emission using socker-io

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.16.1"
+    "mongoose": "^8.16.1",
+    "socket.io": "^4.8.1"
   },
   "name": "rt-updates-api",
   "version": "1.0.0",
